--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 				}
 			}
 		</style>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993870430763010" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
